--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,6 @@
 FROM php:8.1-apache
 
+COPY /apache/default.conf /etc/apache2/sites-enabled/000-default.conf
 
 RUN apt-get update && apt-get install -y \
     curl \
@@ -30,5 +31,8 @@ RUN a2enmod rewrite
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN service apache2 restart
+COPY /src ./
 
+RUN composer update --no-dev --no-interaction
+
+RUN service apache2 restart
